// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationItem parent and itemID with value 1`] = `
<Component
  itemId="someID"
  preventDefault={true}
  to="http://localhost/someValue/someID"
/>
`;

exports[`NavigationItem parent undefined and itemID with value 1`] = `
<Component
  itemId="someID"
  preventDefault={true}
  to="http://localhost//someID"
/>
`;

exports[`NavigationItem parent with value and itemID undefined 1`] = `
<Component
  preventDefault={true}
  to="http://localhost/someValue/undefined"
/>
`;

exports[`NavigationItem should render coorectly 1`] = `
<Component
  preventDefault={true}
  to="http://localhost//undefined"
/>
`;

exports[`NavigationItem with some navigate value set 1`] = `
<Component
  preventDefault={true}
  to={Object {}}
/>
`;
